Revert "Attempting to fix scrollbars on Windows (#1048)"
This reverts commit 075f1a6a3918be4ad92d59681732b6c671612cce.

--- a/app/pb_kits/playbook/pb_filter/_filter.scss
+++ b/app/pb_kits/playbook/pb_filter/_filter.scss
@@ -49,7 +49,7 @@
     display: flex;
     flex-shrink: 1;
     flex-wrap: nowrap;
-    overflow-x: auto;
+    overflow-x: scroll;
     padding-right: 80px;
     padding-top: $space_md;
     padding-bottom: $space_md;
